--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "browserslist": [
-    "> 0.5% or last 2 versions, not dead"
+    "> 0.5% or last 2 versions, not dead, not IE 11"
   ],
   "scripts": {
     "start": "node --experimental-modules src/index.js",
@@ -46,7 +46,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "base64-inline-loader": "^1.1.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
@@ -59,6 +59,7 @@
     "handlebars-loader": "^1.7.1",
     "mkdirp": "^1.0.3",
     "style-loader": "^1.1.3",
+    "svg-url-loader": "^5.0.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
